--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "control-view-cube",
   "version": "1.0.0",
-  "description": "",
+  "description": "ControlViewCube is a React component designed to bring the modern CAD's View Cube feature to Three.js, enhancing the 3D visualization experience. Whether you're building a CAD application, a 3D modeling tool, or any project that involves navigating a 3D scene, ControlViewCube offers an intuitive and interactive solution.",
   "main": "index.jsx",
   "scripts": {
       "dev": "webpack serve --mode development"
