--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "control-view-cube",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "ControlViewCube is a React component designed to bring the modern CAD's View Cube feature to Three.js, enhancing the 3D visualization experience. Whether you're building a CAD application, a 3D modeling tool, or any project that involves navigating a 3D scene, ControlViewCube offers an intuitive and interactive solution.",
   "main": "index.jsx",
   "scripts": {
@@ -18,5 +18,12 @@
   },
   "devDependencies": {
     "mocha": "^9.1.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kuraykaraaslan/control-view-cube.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kuraykaraaslan/control-view-cube/issues"
   }
 }
